# hindu-calendar

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  hindu-calendar
Docs/: ARCHITECTURE.md  BENGALI_INVESTIGATION.md  BENGALI_MIDNIGHT_ZONE.md  CROSS_VALIDATION.md  DEVELOPMENT_JOURNAL.md  DEVELOPMENT_STEPS.md  DRIKPANCHANG_VALIDATION.md  HINDU_CALENDAR_GUIDE.md  IMPLEMENTATION_PLAN.md  JAVA_PORT.md  LICENSING.md  LOCATION.md  MALAYALAM_ADJUSTMENTS.md  MALAYALAM_NOON_FIX.md  MASTER.md  MOSHIER_IMPLEMENTATION.md  NEXT-STEPS.md  NYC_VALIDATION.md  ODIA_ADJUSTMENTS.md  ODIA_YEAR_ADJUSTMENT.md  PERFORMANCE_IMPROVEMENTS.md  PHYSICS.md  PREFIX_RENAME.md  PROFILING.md  PROJECT-STATUS.md  REINGOLD_VALIDATION.md  REINGOLD_VALIDATION_WEB_PAGE.md  RENAMING.md  RUST_PORT.md  SOLAR_MONTH_API.md  SOLAR_PLAN.md  SOLAR_TESTING_PLAN.md  SOLAR_VERIFICATION_WEB.md  SWIFT_PORT.md  SWIFT_PORT_PLAN.md  TEMP_COMPREHENSIVE_GUIDE.md  TEMP_DELTA_T_PLAN.md  TEMP_DP_SCRAP_PLAN.md  TEMP_DP_SCRAP_SOLAR_PLAN.md  TEMP_JAVA_PORT_PLAN.md  (+10 more)
java/: build.gradle.kts  settings.gradle.kts
rust/: Cargo.toml
scraper/: README.md  common.py  compare.py  config.py  fetch.py  parse.py
src/: astro.c  astro.h  date_utils.c  date_utils.h  dst.c  dst.h  main.c  masa.c  masa.h  panchang.c  panchang.h  solar.c  solar.h  tithi.c  tithi.h  types.h
swift/: Package.swift
tests/: test_adhika_kshaya.c  test_astro.c  test_csv_regression.c  test_lunisolar_month.c  test_masa.c  test_nyc.c  test_perf.c  test_perf_random.c  test_solar.c  test_solar_edge.c  test_solar_regression.c  test_solar_validation.c  (+3 more)
(+12316 files in other folders)
